Cleaned Java Code